Fix table overflow

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -339,3 +339,19 @@ $link-active: $link-hover;
   margin-top: 25px;
   margin-bottom: 20px;
 }
+
+// table responsiveness (mobile)
+@media screen and (max-width: 768px) and (min-width: 480px) {
+  table {
+    font-size: 0.8em;
+    font-weight: 400;
+    line-height: 1.5;
+  }
+}
+@media screen and (max-width: 479px) and (min-width: 320px) {
+  table {
+    font-size: 0.5em;
+    font-weight: 350;
+    line-height: 2;
+  }
+}
